completed add and edit car details functionality with frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.7",
-    "dotenv": "^16.0.3",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.11.2",
     "sweetalert2": "^11.7.5",
+    "tabler-icons-react": "^1.56.0",
     "vite-plugin-dotenv": "^0.1.15",
     "web-vitals": "^2.1.4"
   },
