--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,9 @@
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "redis": "^4.6.6"
+    "qrcode": "^1.5.3",
+    "redis": "^4.6.6",
+    "speakeasy": "^2.0.0",
+    "stripe": "^12.7.0"
   }
 }
