--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.5",
     "tabler-icons-react": "^1.56.0",
+    "vercel": "^30.1.2",
     "vite-plugin-dotenv": "^0.1.15",
     "web-vitals": "^2.1.4"
   },
